[package]
name = "serde-cw-value"
version = "0.7.0"
authors = ["arcmx", "Bartłomiej Kuras"]
edition = "2018"

description = "Serialization value trees for CosmWasm"
repository = "https://github.com/hashedone/serde-cw-value"
readme = "README.md"
keywords = ["serde", "wasm"]
license = "MIT"

[features]
json_schema = []

[dependencies]
serde = "^1.0.0"
schemars = { version = "0.8.11", default-features = false, cfg = "feature = \"json_schema\""}

[dev-dependencies]
serde_derive = "^1.0.0"
